Bug 127857 - Assertion in forms when enabling/disabling design
Summary: Assertion in forms when enabling/disabling design
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.4.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2019-09-29 09:09 UTC by Julien Nabet
Modified: 2019-09-29 18:07 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (14.30 KB, text/plain)
2019-09-29 09:09 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-09-29 09:09:19 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil + gtk3, I got an assertion when clicking twice in Design mode.

Steps to Reproduce:
1. Retrieve file https://bugs.documentfoundation.org/attachment.cgi?id=112417
2. Open the file
3. Edit any of the 2 forms
4. Click "Design mode" button twice


Actual Results:
Assertion

Expected Results:
No assertion


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-09-29 09:09:33 UTC
Created attachment 154634 [details]
bt with debug symbols
Comment 2 Julien Nabet 2019-09-29 14:31:47 UTC
https://gerrit.libreoffice.org/#/c/79813/
Comment 3 Commit Notification 2019-09-29 18:02:37 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1df9a89ba0a1dda648e3600ef26d7f38a39f746d

tdf#127857: fix assertion when enabling/disabling design in forms

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.