tdf#127857: fix assertion when enabling/disabling design in forms

See bt:
https://bugs.documentfoundation.org/attachment.cgi?id=154634

When replacing first remove the AccessibleShape (if exists)
then create the new one to replace it

Change-Id: Ia7b0818ab153d710617c0cc60fc06bc07922cebf
Reviewed-on: https://gerrit.libreoffice.org/79813
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>